Added phone to user model recently,noting i havent committed in a few days

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,3 +11,4 @@
 @import "~sweetalert2/dist/sweetalert2.min.css";
 @import "~vuetify/dist/vuetify.min.css";
 @import "~material-design-icons-iconfont/dist/material-design-icons.css";
+@import '~vue-phone-number-input/dist/vue-phone-number-input.css';
