--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,7 +5,7 @@
 @import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import '~bootstrap/dist/css/bootstrap.min.css';
 @import "~admin-lte/dist/css/adminlte.min.css";
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import "~sweetalert2/dist/sweetalert2.min.css";
