Implemented the remember me on login and introduced mails
Fixed the remember me option on all 3 auth pages andmoved setting window token into vuex set token method. Also added mails on register and change of email and moved creating picture into an event listener

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2642,11 +2642,13 @@
 .router-link-exact-active {
   background-color: #027;
   color: #fff;
+  border-radius: 10px;
 }
 
 .v-list__tile--active {
   background-color: #027;
   color: #fff;
+  border-radius: 10px;
 }
 
 .v-btn--active {
