--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -51,17 +51,24 @@ $active_text: #fff;
 }
 .router-link-exact-active{
     background-color: $active;
-    color: $active_text;
+    color: $active_text !important;
     border-radius: 10px;
 }
 .v-list__tile--active{
     background-color: $active;
-    color: $active_text;
+    color: $active_text !important;
     border-radius: 10px;
 }
 .v-btn--active{
     background-color: $active;
-    color: $active_text;
+    color: $active_text !important;
+}
+.v-tabs__item--active{
+	border-radius: 10px;
+	color: $active_text !important;
+}
+a{
+	text-decoration: none !important;
 }
 .horizontal-scroll {
     overflow-x: auto !important;
